Two minor bugs were fixed.

--- a/src/main/resources/messages/app_en.properties
+++ b/src/main/resources/messages/app_en.properties
@@ -56,3 +56,6 @@ msg.all.error=Ops. System failure. Task isn't completed!
 msg.wc.over=Overpopulation robots.
 msg.wc.kill=This robot was killed by user.
 msg.wc.nfd=Robot doesn't exist.
+robot.empty=Sorry
+robot.emptytext=Robots have become extinct :(
+msg.wc.norobots=Robots have become extinct :(
