AspectJ for logging was added.

--- a/src/main/resources/messages/app_en.properties
+++ b/src/main/resources/messages/app_en.properties
@@ -59,3 +59,4 @@ msg.wc.nfd=Robot doesn't exist.
 robot.empty=Sorry
 robot.emptytext=Robots have become extinct :(
 msg.wc.norobots=Robots have become extinct :(
+task.wrong=Unknown task.
