--- a/src/main/resources/messages/app_ru.properties
+++ b/src/main/resources/messages/app_ru.properties
@@ -59,3 +59,4 @@ msg.wc.nfd=Робот не существует.
 robot.empty=Извините
 robot.emptytext=Роботы вымерли :(
 msg.wc.norobots=Роботы вымерли :(
+task.wrong=Неизвестное задание.
